Efeito Deslizamento (lang português)

--- a/jQuery/version2/src/assets/css/eventoDeMouse.css
+++ b/jQuery/version2/src/assets/css/eventoDeMouse.css
@@ -3,7 +3,7 @@
     height: 35px;
     line-height: 35px;
     background-color: #999;
-    text-align: center;
+    text-align: cpt-brter;
     cursor: pointer;
 }
 
