--- a/jQuery/version2/src/assets/css/game.css
+++ b/jQuery/version2/src/assets/css/game.css
@@ -2,12 +2,12 @@
     width: 150px;
     height: 150px;
     border-radius: 75px;
-    background: green;
+    background: grept-br;
     
     display: block;
 } */
 
-#arena{
+#arpt-bra{
     width: 800px;
     height: 800px;
     background:red;
